# dk-routing

./: .gitignore  README.md
Sample Brooklyn Output/: config.json  node_geojson.geojson  route_black-1-input.csv  route_black-1-output.gpx  route_black-17-input.csv  route_black-17-output.gpx  route_black-25-input.csv  route_black-25-output.gpx  route_black-9-input.csv  route_black-9-output.gpx  route_blue-10-input.csv  route_blue-10-output.gpx  route_blue-18-input.csv  route_blue-18-output.gpx  route_blue-2-input.csv  route_blue-2-output.gpx  route_blue-26-input.csv  route_blue-26-output.gpx  route_geojson.geojson  route_green-11-input.csv  route_green-11-output.gpx  route_green-19-input.csv  route_green-19-output.gpx  route_green-27-input.csv  route_green-27-output.gpx  route_green-3-input.csv  route_green-3-output.gpx  route_orange-12-input.csv  route_orange-12-output.gpx  route_orange-20-input.csv  route_orange-20-output.gpx  route_orange-28-input.csv  route_orange-28-output.gpx  route_orange-4-input.csv  route_orange-4-output.gpx  route_pink-13-input.csv  route_pink-13-output.gpx  route_pink-21-input.csv  route_pink-21-output.gpx  route_pink-29-input.csv  (+22 more)
dkroutingtool/: Dockerfile  Dockerfile.dev  Dockerfile.osrm  Makefile  README.md  build_parameters.yml  build_updated_image.sh  build_vehicle_profiles.py  compose.yml  create_application_after_osm.sh  experimentation.ipynb  freezelist.txt  local_start.sh  manual.ipynb  manual.sh  new_version_c.py  new_version_v.py  (+10 more)
dkroutingtool/c_binding_resources/: CMakeLists.txt  python_bindings.cpp  table_parameters.hpp
(+109 files in other folders)
